--- a/promtail-config.yaml
+++ b/promtail-config.yaml
@@ -16,3 +16,8 @@ scrape_configs:
     labels:
       job: varlogs
       __path__: /var/log/*log
+  - targets:
+      - localhost
+    labels:
+      job: docker-logging
+      __path__: /var/lib/docker/containers/*/*-json.log
