--- a/loki-config.yaml
+++ b/loki-config.yaml
@@ -2,12 +2,8 @@ auth_enabled: false
 
 server:
   http_listen_port: 3100
-  grpc_listen_port: 9096
 
 ingester:
-  wal:
-    enabled: true
-    dir: /tmp/wal
   lifecycler:
     address: 127.0.0.1
     ring:
@@ -33,20 +29,22 @@ schema_config:
 
 storage_config:
   boltdb_shipper:
-    active_index_directory: /tmp/loki/boltdb-shipper-active
-    cache_location: /tmp/loki/boltdb-shipper-cache
+    active_index_directory: /loki/boltdb-shipper-active
+    cache_location: /loki/boltdb-shipper-cache
     cache_ttl: 24h         # Can be increased for faster performance over longer query periods, uses more disk space
     shared_store: filesystem
   filesystem:
-    directory: /tmp/loki/chunks
+    directory: /loki/chunks
 
 compactor:
-  working_directory: /tmp/loki/boltdb-shipper-compactor
+  working_directory: /loki/boltdb-shipper-compactor
   shared_store: filesystem
 
 limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 168h
+  ingestion_burst_size_mb: 16
+  ingestion_rate_mb: 16
 
 chunk_store_config:
   max_look_back_period: 0s
@@ -59,9 +57,9 @@ ruler:
   storage:
     type: local
     local:
-      directory: /tmp/loki/rules
-  rule_path: /tmp/loki/rules-temp
-  alertmanager_url: http://localhost:9093
+      directory: /loki/rules
+  rule_path: /loki/rules-temp
+  alertmanager_url: localhost
   ring:
     kvstore:
       store: inmemory
